<resources>
    <string name="app_name">IW14A_Kadai12_13</string>
    <string name="btnClear">C</string>
    <string name="btnNum1">1</string>
    <string name="btnNum2">2</string>
    <string name="btnNum3">3</string>
    <string name="btnNum4">4</string>
    <string name="btnNum5">5</string>
    <string name="btnNum6">6</string>
    <string name="btnNum7">7</string>
    <string name="btnNum8">8</string>
    <string name="btnNum9">9</string>
    <string name="btnNum10">0</string>
    <string name="btnEqual">=</string>
    <string name="btnPlus">＋</string>
    <string name="btnMinus">－</string>
    <string name="btnKakeru">×</string>
    <string name="btnWaru">÷</string>
</resources>
