<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android_user.iw14a_kadai12_13.MainActivity">

    <TextView
        android:id="@+id/txtIndicator"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#000"
        android:textColor="#fff"
        android:text="Hello World!"
        android:gravity="right"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnClear" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEqual" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPlus" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnMinus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnKakeru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnKakeru" />

            <Button
                android:id="@+id/btnWaru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnWaru" />

            <Button
                android:id="@+id/btnNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum1" />

            <Button
                android:id="@+id/btnNum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnNum3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum3" />

            <Button
                android:id="@+id/btnNum4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum4" />

            <Button
                android:id="@+id/btnNum5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum5" />

            <Button
                android:id="@+id/btnNum6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnNum7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum7" />

            <Button
                android:id="@+id/btnNum8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum8" />

            <Button
                android:id="@+id/btnNum9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnNum9" />

            <Button
                android:id="@+id/btnNum10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum10" />
        </TableRow>

    </TableLayout>

</LinearLayout>
